<resources>
  <!-- Navigation Drawer -->
  <string name="infrastructure_status">Infrastructure Status</string>
  <string name="package_search">Package Search</string>
  <string name="badges_leaderboard">Badges Leaderboard</string>
  <string name="register_fmn">Fedmsg Notifications (beta)</string>
  <string name="preferences">Preferences</string>

  <!-- Global-ish words, found often throughout the app. -->
  <string name="app_name">Fedora Mobile</string>
  <string name="search">Search</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="refresh">Refresh</string>
  <string name="loading">Loading…</string>
  <string name="submit">Submit</string>
  <string name="update">Update</string>
  <string name="not_now">Not now</string>
  <string name="username">Username</string>
  <string name="user_profile">User Profile</string>
  <string name="pkgs_owned">Pkgs Owned</string>
  <string name="fas_groups">FAS Groups</string>
  <string name="badges">Badges</string>

  <!-- Misc. errors -->
  <string name="android_getview_error">Something tried to spawn a fragment that doesn\'t exist!</string>

  <string name="update_available">Update available</string>
  <string name="update_available_desc">A new commit has been made to Fedora Mobile. Would you like to update to it? (You can disable auto-checking via Preferences)</string>
  <string name="update_failure">Ut oh! Something went wrong while trying to update. :(</string>

  <string name="fedora_status">Fedora Status</string>
  <string name="status_good">Up and running</string>
  <string name="status_minor">Minor issue</string>
  <string name="status_scheduled">Scheduled outage</string>
  <string name="status_major">Major issue</string>
  <string name="status_unknown">Status unknown</string>
  <string name="status_failure">An issue occurred while obtaining status information.</string>

  <string name="packages_search_hint">Search Packages</string>
  <string name="packages_search_failure">An issue occurred while searching.</string>

  <string name="packages_release_failure">An issue occurred while looking up release information.</string>
  <string name="release">Release</string>
  <string name="stable">Stable</string>
  <string name="testing">Testing</string>
  <string name="package_summary">Package summary</string>
  <string name="description">Description</string>
  <string name="package_versions">Package Versions</string>

  <string name="newsfeed_failure">An issue occurred while updating newsfeed data.</string>

  <!-- Preferences -->
  <string name="pref_fas">Fedora Account System (FAS)</string>
  <string name="pref_fas_username_summary">Currently only used for Badges integration.</string>

  <string name="fmn_openid">Fedmsg Notifications OpenID</string>
  <string name="pref_fmn_openid_summary">The OpenID account used to authenticate with the Fedmsg Notifications system.</string>

  <string name="pref_fmn">Fedmsg Notifications</string>
  <string name="fmn_apikey">Fedmsg Notifications API Key</string>
  <string name="pref_fmn_apikey_summary">The API used to authenticate with the Fedmsg Notifications system.</string>

  <string name="pref_development">Development Options</string>
  <string name="check_updates">Check for updates</string>
  <string name="pref_check_updates_summary">Call out to GitHub on application start, to see if we are running the latest commit.</string>
  <string name="use_staging">Use staging apps</string>
  <string name="pref_use_staging_summary">Use staging versions of applications with which we interact, for applications which have a staging instance.</string>

  <!-- Badges -->
  <string name="fedora_badges">Fedora Badges</string>
  <string name="leaderboard">Leaderboard</string>
  <string name="badge">Badge</string>
  <string name="badges_lb_failure">An issue occurred while loading the Badges leaderboard.</string>
  <string name="badges_user_failure">An issue occurred while loading user information.</string>
  <string name="badges_lb_rank">Rank:</string>
  <plurals name="badges_lb_badges">
    <item quantity="one">One badge</item>
    <item quantity="other">%d badges</item>
  </plurals>
  <string name="badges_earned_on">Awarded %s.</string>

  <!-- Fedmsg Count Widget -->
  <string name="fedmsg_count_time">fedmsg messages as of %s</string>

  <!-- Fedmsg Notifications -->
  <string name="register">Register</string>
  <string name="fedmsg_confirmation_title">Fedmsg Notifications Confirmation</string>
  <string name="fedmsg_confirmation_text">Please confirm that you would like to subscribe to Fedora Fedmsg notifications</string>
  <string name="reject">Reject</string>
  <string name="accept">Accept</string>
  <string name="fmn_no_username_or_api_key">Please ensure that you have a valid oauth URL and FMN API key in your Fedora Mobile preferences.</string>
  <string name="fmn_no_secret">No secret received from FMN. This is a bug somewhere, please report it.</string>
  <string name="fmn_error">An interesting error occurred. Please try again and if the problem persists, file a bug.</string>
  <string name="fmn_save_success">Successfully saved your Fedmsg Notifications authentication information!</string>
  <string name="fmn_stored">Successfully sent your confirmation decision to FMN!</string>
</resources>
