<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/pref_fas"
      android:key="pref_fas">
    <EditTextPreference
        android:key="pref_fas_username"
        android:title="@string/username"
        android:summary="@string/pref_fas_username_summary" />

    <EditTextPreference
        android:key="pref_fmn_openid"
        android:title="@string/fmn_openid"
        android:summary="@string/pref_fmn_openid_summary" />
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_fmn"
      android:key="pref_fmn">
    <EditTextPreference
        android:key="pref_fmn_apikey"
        android:title="@string/fmn_apikey"
        android:summary="@string/pref_fmn_apikey_summary" />
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/pref_development"
      android:key="pref_development">
    <CheckBoxPreference
        android:key="check_updates"
        android:title="@string/check_updates"
        android:summary="@string/pref_check_updates_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="use_staging"
        android:title="@string/use_staging"
        android:summary="@string/pref_use_staging_summary"
        android:defaultValue="false" />
  </PreferenceCategory>
</PreferenceScreen>
